fixes #2444: Use newline char w/ white-space:pre-wrap to avoid use of v-html
Using white-space: pre-wrap along with \n provides the same behavior as <br> without the need to parse the HTML. This eliminates the need for using v-html which is susceptible to XSS.

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -268,6 +268,7 @@ $floating-in-height: 3.25em !default;
     .help.counter {
         float: right;
         margin-left: 0.5em;
+        white-space: pre-wrap;
     }
     .icon {
         &.is-clickable {
